<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/F3F2F2">

	<include layout="@layout/title_back"/>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:scrollbars="none">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">

			<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="60dp"
				android:background="#e9e9e9">

				<com.example.zf_android.trade.widget.MyTabWidget
					android:id="@+id/apply_detail_tab"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginLeft="24dp"
					android:layout_marginRight="24dp"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="10dp"/>
			</FrameLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:paddingTop="10dp"
				android:paddingBottom="16dp"
				android:paddingLeft="24dp"
				android:paddingRight="24dp">

				<LinearLayout
					android:id="@+id/apply_detail_key"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:gravity="right">

					<TextView
						style="@style/TextTrace.Left.Key"
						android:text="@string/apply_detail_brand"/>

					<TextView
						style="@style/TextTrace.Left.Key"
						android:text="@string/apply_detail_model"/>

					<TextView
						style="@style/TextTrace.Left.Key"
						android:text="@string/apply_detail_serial"/>

					<TextView
						style="@style/TextTrace.Left.Key"
						android:text="@string/apply_detail_channel"/>
				</LinearLayout>

				<LinearLayout
					android:id="@+id/apply_detail_value"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="12dp"
					android:orientation="vertical">

					<TextView
						android:id="@+id/apply_detail_brand"
						style="@style/TextTrace.Right.Value"/>

					<TextView
						android:id="@+id/apply_detail_model"
						style="@style/TextTrace.Right.Value"/>

					<TextView
						android:id="@+id/apply_detail_serial"
						style="@style/TextTrace.Right.Value"/>

					<TextView
						android:id="@+id/apply_detail_channel"
						style="@style/TextTrace.Right.Value"/>
				</LinearLayout>
			</LinearLayout>

			<View style="@style/Divider"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<LinearLayout
					android:id="@+id/apply_detail_merchant_container"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="16dp"
					android:orientation="vertical"/>

				<View style="@style/Divider"/>

				<LinearLayout
					android:id="@+id/apply_detail_terminal_container"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="16dp"
					android:orientation="vertical"/>

				<View style="@style/Divider"/>

				<LinearLayout
					android:id="@+id/apply_detail_material_container"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"/>

				<Button
					android:id="@+id/apply_submit"
					style="@style/ButtonNormal"
					android:layout_marginTop="24dp"
					android:text="@string/button_submit"
					android:enabled="false"/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>