<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/F3F2F2">

	<include layout="@layout/title_back"/>

	<View
		style="@style/Divider"
		android:layout_marginTop="24dp"/>

	<FrameLayout
		style="@style/FrameItem">

		<EditText
			android:id="@+id/apply_progress_phone"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginRight="114dp"
			android:textSize="19sp"
			android:textColor="@color/text6c6c6c6"
			android:hint="@string/apply_progress_phone"
			android:textColorHint="@color/Viewc2"
			android:background="@android:color/transparent"
			android:layout_gravity="left|center_vertical"
			android:focusable="true"
			android:focusableInTouchMode="true"/>

		<Button
			android:id="@+id/apply_progress_query"
			android:layout_width="108dp"
			android:layout_height="36dp"
			android:textColor="@color/white"
			android:textSize="16sp"
			android:background="@drawable/normal_button_selector"
			android:layout_gravity="right|center_vertical"
			android:text="@string/button_query"
			android:enabled="false"/>
	</FrameLayout>

	<View style="@style/Divider"/>

	<TextView
		android:id="@+id/apply_progress_tips"
		style="@style/TextItem"
		android:layout_gravity="center"
		android:layout_marginTop="36dp"
		android:text="@string/apply_progress_no_data"
		android:visibility="gone"/>

	<LinearLayout
		android:id="@+id/apply_progress_content"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_marginTop="24dp"
		android:visibility="gone">

		<View style="@style/Divider"/>

		<ListView
			android:id="@+id/apply_progress_list"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:divider="@color/Viewc2"
			android:dividerHeight="1px"
			android:scrollbars="none"/>

		<View style="@style/Divider"/>
	</LinearLayout>


</LinearLayout>