<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/title_back"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/trade_detail_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="24dp"
                android:textSize="20sp"
                android:textColor="@color/text292929"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextDetail.Top"
                        android:text="@string/trade_amount"/>

                    <TextView
                        style="@style/TextDetail.Top"
                        android:text="@string/trade_charge"/>

                    <TextView
                        style="@style/TextDetail.Top"
                        android:text="@string/trade_time"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp">

                    <TextView
                        android:id="@+id/trade_detail_amount"
                        style="@style/TextDetail.Top"/>

                    <TextView
                        android:id="@+id/trade_detail_poundage"
                        style="@style/TextDetail.Top"/>

                    <TextView
                        android:id="@+id/trade_detail_time"
                        style="@style/TextDetail.Top"/>
                </LinearLayout>

            </LinearLayout>

            <View
                style="@style/Divider"
                android:layout_height="2px"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <TextView
                    style="@style/TextDetail.Title"
                    android:text="@string/trade_item_commercial_info"/>

                <View
                    style="@style/Divider"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:background="@color/bgtitle"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/trade_commercial_key_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"/>

                    <LinearLayout
                        android:id="@+id/trade_commercial_value_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:orientation="vertical"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp">

                <TextView
                    style="@style/TextDetail.Title"
                    android:text="@string/trade_item_bank_info"/>

                <View
                    style="@style/Divider"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:background="@color/bgtitle"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/trade_bank_key_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"/>

                    <LinearLayout
                        android:id="@+id/trade_bank_value_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:orientation="vertical"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>

